services/krakend-prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: krakend-prod
  labels:
    name: krakend-prod
    environment: prod
